--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Justin.1800Contacts.Api.Test\packages.config" />
   <repository path="..\Justin.1800Contacts.Web\packages.config" />
 </repositories>
