Day 3 - Made logic layer ready and implemented api controller

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Justin.1800Contacts.Api.Test\packages.config" />
+  <repository path="..\Justin.1800Contacts.Api\packages.config" />
   <repository path="..\Justin.1800Contacts.Web\packages.config" />
 </repositories>
