--- a/Justin.1800Contacts.Api/Justin.1800Contacts.Api.csproj
+++ b/Justin.1800Contacts.Api/Justin.1800Contacts.Api.csproj
@@ -72,18 +72,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ClassController.cs" />
-    <Compile Include="Interface\IClassLogic.cs" />
-    <Compile Include="Interface\ISorter.cs" />
-    <Compile Include="Logic\ClassItem.cs" />
-    <Compile Include="Logic\ClassLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sorting\SortingExceptions.cs" />
-    <Compile Include="Sorting\SortItem.cs" />
-    <Compile Include="Sorting\SortItemEqualityComparer.cs" />
-    <Compile Include="Sorting\TopologicalSorter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Justin.1800Contacts.Logic\Justin.1800Contacts.Logic.csproj">
+      <Project>{b4b357d1-5f83-455f-9be3-64d25e0118f0}</Project>
+      <Name>Justin.1800Contacts.Logic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
