--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Justin.1800Contacts.Api.Test\packages.config" />
   <repository path="..\Justin.1800Contacts.Api\packages.config" />
+  <repository path="..\Justin.1800Contacts.Logic.Tests\packages.config" />
   <repository path="..\Justin.1800Contacts.Web\packages.config" />
 </repositories>
